syntax = "proto3";
package pb;
option go_package = "github.com/danielvladco/jrpc/example/pb;pb";

service Service {
    rpc Endpoint1 (Endpoint1Req) returns (Endpoint1Res);
}

message Endpoint1Req {
    string string = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    bool bool = 5;
    bytes bytes = 6;
    Error err = 7;
    Msg msg = 8;
}
message Endpoint1Res {
    string string = 1;
    int32 int32 = 2;
    int64 int64 = 3;
    uint32 uint32 = 4;
    bool bool = 5;
    bytes bytes = 6;
    Msg msg = 8;
}

message Msg {
    string param1 = 1;
}

enum Error {
    OK = 0;
    CANCELLED = 1;
    UNKNOWN = 2;
    INVALID_ARGUMENT = 3;
    DEADLINE_EXCEEDED = 4;
    NOT_FOUND = 5;
    ALREADY_EXISTS = 6;
    PERMISSION_DENIED = 7;
    UNAUTHENTICATED = 8;
    RESOURCE_EXHAUSTED = 9;
    FAILED_PRECONDITION = 10;
    ABORTED = 11;
    OUT_OF_RANGE = 12;
    UNIMPLEMENTED = 13;
    INTERNAL = 14;
    UNAVAILABLE = 15;
    DATA_LOSS = 16;
}